Added a floating button before the closing

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <div class="logo">
                 <a href="#">FitLife</a>
             </div>
+            <button id="dark-mode-toggle" class="btn" style="margin-left:20px;">🌙 Dark Mode</button>
             <nav class="nav-menu" id="navMenu">
                 <ul class="nav-links">
                     <li><a href="#home">Home</a></li>
@@ -201,5 +202,8 @@
     </footer>
 
     <script src="script.js"></script>
+    <button id="back-to-top" title="Back to Top" style="display:none;position:fixed;bottom:30px;right:30px;z-index:2000;" class="btn btn-primary">
+        <i class="fas fa-arrow-up"></i>
+    </button>
 </body>
 </html>
