Update  with Featured Classes section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FitLife - Simple Fitness Website</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans:wght=400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
@@ -20,7 +20,7 @@
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#services">Services</a></li>
-                    <li><a href="#calculator">Fitness Calculator</a></li>
+                    <li><a href="#featured-classes">Classes</a></li> <li><a href="#calculator">Fitness Calculator</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
                 <div class="burger-menu" id="burger-menu">
@@ -75,6 +75,31 @@
         </div>
     </section>
 
+    <section id="featured-classes" class="featured-classes-section section-padding">
+        <div class="container">
+            <h2>Featured Classes</h2>
+            <div class="class-grid">
+                <div class="class-item">
+                    <img src="images/yoga.jpg" alt="Yoga Class">
+                    <h3>Yoga & Meditation</h3>
+                    <p>Improve flexibility, strength, and mental clarity with our expert-led yoga sessions.</p>
+                    <a href="#" class="btn btn-secondary">Learn More</a>
+                </div>
+                <div class="class-item">
+                    <img src="images/crossfit.jpg" alt="CrossFit Class">
+                    <h3>High-Intensity Interval Training (HIIT)</h3>
+                    <p>Burn calories and build endurance with our challenging and fun HIIT classes.</p>
+                    <a href="#" class="btn btn-secondary">Learn More</a>
+                </div>
+                <div class="class-item">
+                    <img src="images/zumba.jpg" alt="Zumba Class">
+                    <h3>Zumba Dance Fitness</h3>
+                    <p>Dance your way to fitness with energetic and exhilarating Zumba sessions.</p>
+                    <a href="#" class="btn btn-secondary">Learn More</a>
+                </div>
+            </div>
+        </div>
+    </section>
     <section id="testimonials" class="testimonials-section section-padding">
         <div class="container">
             <h2>Success Stories</h2>
